--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd staff-frontend && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix staff-frontend && npm run build --prefix staff-frontend",
     "start": "nodemon server.js"
+    
   },
   "author": "",
   "license": "ISC",
